[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Saker Lin <iamsaker.s001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
